Fixed blockquote spacing, last p gets no bottom-margin, blockquote gets 20px bottom margin to compensate.

--- a/www/wp-content/themes/cc5/site.css
+++ b/www/wp-content/themes/cc5/site.css
@@ -45,7 +45,7 @@ p { margin-bottom: 10px; }
 
 blockquote { 
 	padding: 5px 5px 5px 10px; 
-	margin: 5px 5px 5px 3px; 
+	margin: 5px 5px 20px 3px; 
 	font-style: oblique; 
 	border-left: 1px solid #ddd; 
 }
@@ -54,6 +54,9 @@ blockquote em {
 	font-style: normal;
 }
 
+blockquote p:last-child {
+	margin-bottom: 0;
+}
 
 img.mugshot {
 	border: 2px solid #cccccc; 
